--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ $white: #ffffff;
 
 .galleryContainer {
   height: auto;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
